--- a/_posts/2017-01-05-markdown语法.md
+++ b/_posts/2017-01-05-markdown语法.md
@@ -1,44 +1,53 @@
 ---
 layout: post
-title: MarkDown语法
-category : 工具使用
-tagline: "Supporting tagline"
-tags : work, tools
-published: false
+title: Markdown语法
+description: ""
+category: 工具使用
+tags: [work]
 ---
 
 段落、标题、区块
-===============
+========
 
 最高阶标题
-==========
-“在一行文字下使用一行======表示该文字为最高阶标题  
-次高阶标题
-------------
-”在一行文字下使用一行------表示该文字为次高阶标题  
-换行
-------------
-”在行尾添加空格后回车表示换行
+========
+“在一行文字下使用一行======表示该文字为最高阶标题
 
-#一级标题
-”使用一个#表示一级标题
-##二级标题
-”使用两个#表示二级标题
-###三级标题
-”使用三个#表示三级标题
-####四级标题
-”使用四个#表示四级标题
-#####五级标题
-”使用五个#表示五级标题
-######六级标题
-“使用六个#表示六级标题
+次高阶标题
+-----------
+”在一行文字下使用一行------表示该文字为次高阶标题
+
+<!--break-->
+
+换行
+-----------
+在行尾添加空格后回车表示换行
+
+# 一级标题  
+使用一个#表示一级标题
+
+## 二级标题
+使用两个#表示二级标题
+
+### 三级标题
+使用三个#表示三级标题
+
+#### 四级标题
+使用四个#表示四级标题
+
+##### 五级标题
+使用五个#表示五级标题
+
+###### 六级标题
+使用六个#表示六级标题
+
 >文字块  
-”使用>表示文字块,在>和文字之间添加五个空格，块的样式会有变化，出现border框  
+使用>表示文字块,在>和文字之间添加五个空格，块的样式会有变化，出现border框  
 
 *这是一个斜体*  
-”使用一个*或__将文字包含起来，文字将显示斜体  
+使用一个*或__将文字包含起来，文字将显示斜体  
 **这是一个粗体**  
-"使用两个\*或\__将文字包含起来，文字将显示粗体
+使用两个\*或\__将文字包含起来，文字将显示粗体
 
 无序列表
 ----------
