修改图片路径

--- a/_posts/2017-01-05-markdown语法.md
+++ b/_posts/2017-01-05-markdown语法.md
@@ -69,7 +69,7 @@ tags: [work]
 
 图像
 ------------
-1. ![alttext](/path/image) : \![alttext]\(imageurl "title")title
+1. ![alttext](/image/apple-touch-icon.png) : \![alttext]\(imageurl "title")title
 2. 引用：![altext][id] : \![alttext]\[id]
 
 代码
